# subsets-chat

./: .gitignore  README.md  pyproject.toml
subsets-frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
subsets-frontend/src/: App.tsx  index.css  main.tsx
subsets-frontend/src/api/: client.ts  schema.d.ts
subsets-frontend/src/auth/: AuthContext.tsx  AuthContextDef.ts  ProtectedRoute.tsx  useAuth.ts
subsets-frontend/src/components/: AppLayout.tsx  Composer.tsx  Feed.tsx  MessageItem.tsx  UserList.tsx
subsets-frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx  textarea.tsx
subsets-frontend/src/pages/: ChatPage.tsx  LoginPage.tsx  RegisterPage.tsx
subsets-frontend/src/ws/: useFeedSocket.ts
subsets_chat/: __init__.py  app.py  auth.py  db.py
subsets_chat/static/: app.js  index.html  styles.css
tests/: test_api.py  test_feed.py
