[project]
name = "subsets-chat"
version = "0.1.0"
description = "Backend MVP for constructive personal-set chat feeds."
requires-python = ">=3.11"
dependencies = ["fastapi>=0.112", "uvicorn>=0.30", "websockets>=16.0"]

[dependency-groups]
dev = ["pytest>=9", "mypy>=1.20"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
