[project]
name = "subsets-chat"
version = "0.1.0"
description = "Backend MVP for constructive personal-set chat feeds."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.112",
    "pyjwt>=2.10",
    "pwdlib[argon2]>=0.3",
    "python-multipart>=0.0.20",
    "uvicorn>=0.30",
    "websockets>=16.0",
]

[dependency-groups]
dev = ["httpx>=0.28", "mypy>=1.20", "pytest>=9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
